text changes and adjustments

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -74,7 +74,7 @@
                 <p>
                     No complicated registration process. No hidden costs. No more big technology decisions at the beginning of each project -
                     Biotope works with any framework so you can build in the environment of your choice. And everyone else too. Build up your
-                    Web Component Library together and
+                    Web Component Library together.
                 </p>
             </div>
             <bio-easy-set-up data-resources="[{paths: ['components/BioEasySetUp/index.js']}]"
@@ -110,7 +110,7 @@
 				imgsrc="_assets/BioEasySetUp/5.svg"
 				alt="step five"
                 headline="Start Building Components"
-                text="Install the included build-system that helps you to automatically build product-ready resources"
+                text="Use the CLI tool to create your first component. Run the command to generate the boilerplate you need to start coding right away."
                 code="biotope generate">
             </bio-easy-set-up>
             <img class="installation__line" src="../_assets/BioEasySetUp/line.svg">
@@ -442,7 +442,9 @@
                     Further information from LinkedIn on data protection: <a href="https://www.linkedin.com/legal/privacy-policy">https://www.linkedin.com/legal/privacy-policy</a>, 
                     an opt-out option can be found here: 
                     <a href="https://www.linkedin.com/psettings/guest-controls/retargeting-opt-out">https://www.linkedin.com/psettings/guest-controls/retargeting-opt-out</a>
-                    For more information on the LinkedIn Insight tag, please visit: <a href="https://www.linkedin.com/help/linkedin/answer/65521">https://www.linkedin.com/help/linkedin/answer/65521</a></p>
+                    For more information on the LinkedIn Insight tag, please visit: <a href="https://www.linkedin.com/help/linkedin/answer/65521">https://www.linkedin.com/help/linkedin/answer/65521</a>
+                    <a data-cookie-settings class="internal">Open your cookie settings to decline being tracked using the LinkedIn Insight Tag.</a>
+                    </p>
                 <h4>10.	Your rights</h4>
                 <p>In particular, you may request information about the purposes of the processing, the category of personal data, the categories of recipients 
                     to whom your data has been or will be disclosed, the planned storage period, the existence of a right of rectification, deletion, limitation of 
@@ -480,7 +482,7 @@
                     then the data will be blocked instead of deleted.</p>
                 <h4>14.	Automated decision making including profiling</h4>
                 <p>There is no automated decision making, including profiling.</p>
-                <h4>15.	Ansprechpartner bei Fragen zum Datenschutz</h4>
+                <h4>15.	Contact person for questions regarding data protection</h4>
                 <p>If you have any further questions regarding the collection, processing and use of your personal data, please contact our data protection officer at</p>
                 <p>Virtual Identity AG<br>
                     Data Protection Officer<br>
