refactor part of cookie banner to accept slotted P text so that we can use a link to PrivacyPolicy

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -443,7 +443,9 @@
                     an opt-out option can be found here: 
                     <a href="https://www.linkedin.com/psettings/guest-controls/retargeting-opt-out">https://www.linkedin.com/psettings/guest-controls/retargeting-opt-out</a>
                     For more information on the LinkedIn Insight tag, please visit: <a href="https://www.linkedin.com/help/linkedin/answer/65521">https://www.linkedin.com/help/linkedin/answer/65521</a>
+                    <p>
                     <a data-cookie-settings class="internal">Open your cookie settings to decline being tracked using the LinkedIn Insight Tag.</a>
+                    </p>
                     </p>
                 <h4>10.	Your rights</h4>
                 <p>In particular, you may request information about the purposes of the processing, the category of personal data, the categories of recipients 
@@ -496,4 +498,11 @@
     </div>
 </bio-modal>
 
-<bio-cookie-banner data-resources="[{paths: ['components/BioCookieBanner/index.js']}]"></bio-cookie-banner>
+<bio-cookie-banner data-resources="[{paths: ['components/BioCookieBanner/index.js']}]">
+    <p>We use cookies so that we can offer you the best possible website experience and see whether our marketing campaigns are effective. 
+    With Google Analytics (cookies expire in 24 months) we gain insights on how users interact with the website to better understand if 
+    their needs are met. With the LinkedIn Insight Tag (cookies expire in 24 months) we gain insights whether our marketing efforts are 
+    having the desired effect. You are free to decline these cookies, but we'd be happy if you let us use your anonymized data. Further 
+    information can be found in our <a class="js-openModal" modalType="privacy">Privacy Policy</a>
+    </p>
+</bio-cookie-banner>
