--- a/src/resources/scss/base/_types.scss
+++ b/src/resources/scss/base/_types.scss
@@ -40,6 +40,7 @@ h4 {
 
 /* Global link styles */
 a {
+	cursor: pointer;
 	font-weight: $font-weight-bold;
 	text-decoration: none;
 	letter-spacing: 0.2px;
