Updated the animation.json and the texts in the corresponding component.

--- a/src/components/BioScrollAnimation/scaffolding/BioScrollAnimation.hbs
+++ b/src/components/BioScrollAnimation/scaffolding/BioScrollAnimation.hbs
@@ -14,23 +14,22 @@
 
 	<section class="animation-slide">
 		<h3>Collaborate</h3>
-		<p>across several teams or projects on your component pool. Biotope's in-built quality gate and living styleguide ensure all standards are met - no matter who works on it and what tech stack is used.</p>
+		<p>across several teams or projects on your component pool. Biotope's built-in quality gate and living styleguide ensure all standards are met - no matter who works on it.</p>
 	</section>
 
 	<section class="animation-slide">
 		<h3>Distribute</h3>
-		<p>your Web Components simultaneously from a single location - not for every website or app individually. This guarantees a consistent appearance throughout all of your digital products. Conditional loading ensures you only ever tap the resources you need. </p>
+		<p>your Web Components simultaneously from a single location. This guarantees a consistent appearance throughout all of your digital products. Conditional loading ensures you only ever tap the resources you need.</p>
 	</section>
 
 	<section class="animation-slide">
 		<h3>Adopt</h3>
-		<p>your components for any of your digital products. The living styleguide shows how to use them. Biotope ensures they work in any framework: React, Angular, Vue - whichever you prefer.</p>
+		<p>your components for any of your digital products. Biotope ensures they work in any framework: React, Angular, Vue - whichever you prefer. And the living styleguide shows how to use them.</p>
 	</section>
 
 	<section class="animation-slide">
 		<h3>Stay ahead</h3>
-		<p>and continuously evolve your library with every new version of a component. Thereby easily enforcing style and branding guidelines. Get rid of design debt and excessive maintenance costs. </p>
-		<p>The use of Biotope already pays off if you manage more than one digital product.</p>
+		<p>and continuously evolve your library with every new version of a component. Thereby easily enforcing style and branding guidelines. Get rid of design debt and excessive maintenance costs.</p>
 	</section>
 
 </bio-scroll-animation>
