--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -499,10 +499,9 @@
 </bio-modal>
 
 <bio-cookie-banner data-resources="[{paths: ['components/BioCookieBanner/index.js']}]">
-    <p>We use cookies so that we can offer you the best possible website experience and see whether our marketing campaigns are effective. 
-    With Google Analytics (cookies expire in 24 months) we gain insights on how users interact with the website to better understand if 
-    their needs are met. With the LinkedIn Insight Tag (cookies expire in 24 months) we gain insights whether our marketing efforts are 
-    having the desired effect. You are free to decline these cookies, but we'd be happy if you let us use your anonymized data. Further 
-    information can be found in our <a class="js-openModal" modalType="privacy">Privacy Policy</a>
+    <p>We use cookies to create the best possible website experience and see whether our marketing campaigns are effective. Google Analytics (cookies expire in 24 months) 
+        helps us gain a better understanding on how users interact with the website. With the LinkedIn Insight Tag (cookies expire in 24 months) we gain insights whether our 
+        marketing efforts are having the desired effect. You are free to decline these cookies, but we'd be happy if you let us use your anonymized data. Further information 
+        can be found in our <a class="js-openModal" modalType="privacy">Privacy Policy</a>
     </p>
 </bio-cookie-banner>
