--- a/src/components/BioButton/styles.scss
+++ b/src/components/BioButton/styles.scss
@@ -44,6 +44,14 @@
 			}
 		}
 
+		&.compact {
+			min-width: 130px;
+			
+			@include breakpoint($medium){
+				min-width: 160px;
+			}
+		}
+
 		&.whiteText{
 			color: $bio-white;
 		}
