swoosh: improved margin feature

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -55,7 +55,7 @@
         </div>
     </div>
 
-	<bio-swoosh color="#fff" direction="down" height="270" data-resources="[{paths: ['components/BioSwoosh/index.js']}]"></bio-swoosh>
+	<bio-swoosh color="#fff" direction="down" height="270" margin-top="50" margin-bottom="0" data-resources="[{paths: ['components/BioSwoosh/index.js']}]"></bio-swoosh>
 
 </section>
 
@@ -65,7 +65,7 @@
 
 <section id="installation" class="installation">
 
-	<bio-swoosh color="#f8fbfd" direction="up" height="270" offset-x="-768" data-resources="[{paths: ['components/BioSwoosh/index.js']}]"></bio-swoosh>
+	<bio-swoosh color="#f8fbfd" direction="up" height="270" margin-top="50" offset-x="-768" data-resources="[{paths: ['components/BioSwoosh/index.js']}]"></bio-swoosh>
 
     <div class="row row--reducedWidth">
         <div class="col">
@@ -492,9 +492,10 @@
 </bio-modal>
 
 <bio-cookie-banner data-resources="[{paths: ['components/BioCookieBanner/index.js']}]">
-    <p>We use cookies to create the best possible website experience and see whether our marketing campaigns are effective. Google Analytics (cookies expire in 24 months) 
-        helps us gain a better understanding on how users interact with the website. With the LinkedIn Insight Tag (cookies expire in 24 months) we gain insights whether our 
-        marketing efforts are having the desired effect. You are free to decline these cookies, but we'd be happy if you let us use your anonymized data. Further information 
+    <p>We use cookies to create the best possible website experience and see whether our marketing campaigns are effective. Google Analytics (cookies expire in 24 months)
+        helps us gain a better understanding on how users interact with the website. With the LinkedIn Insight Tag (cookies expire in 24 months) we gain insights whether our
+        marketing efforts are having the desired effect. You are free to decline these cookies, but we'd be happy if you let us use your anonymized data. Further information
         can be found in our <a class="js-openModal" modalType="privacy">Privacy Policy</a>
     </p>
 </bio-cookie-banner>
+
