--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -144,7 +144,7 @@
                 </bio-resource>
                 <bio-resource data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/expert.svg" border="noBorder">
                     <p>You want to learn more? Ask an expert.</p>
-                    <bio-button modifier="full" title="Contact" url="mailto:coregroup@biotope.sh"></bio-button>
+                    <bio-link-button data-resources="[{paths: ['components/BioLinkButton/index.js']}]" modifier="full" title="Contact" url="mailto:coregroup@biotope.sh"></bio-link-button>
                 </bio-resource>
             </div>
         </div>
@@ -195,8 +195,8 @@
             <div class="company__leads">
                 <p>Need help setting up your frontend ecosystem? <br>
                     We'd love to support you.</p>
-                <bio-button title="Contact VI" modifier="full"
-                    data-resources="[{paths: ['components/BioButton/index.js']}]" url="mailto:biotope.support@virtual-identity.com"></bio-button>
+                <bio-link-button title="Contact VI" modifier="full"
+                    data-resources="[{paths: ['components/BioLinkButton/index.js']}]" url="mailto:biotope.support@virtual-identity.com"></bio-button>
             </div>
         </div>
     </div>
