--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -364,6 +364,7 @@ section {
 		}
 
 		img {
+			width: 150px;
 			margin-right: 10px;
 			display: none;
 
@@ -406,6 +407,7 @@ section {
 
 		p {
 			@extend %benefit-text;
+			margin-bottom: 30px;
 		}
 	}
 
