feat(tracking): rework tracking optout
before: tracking optout via re-opening of cookiebar -> decline.; now: google optout by clicking a
link that updates a label. linkedin optout with an external link.

#159

--- a/src/resources/scss/settings/_settings.scss
+++ b/src/resources/scss/settings/_settings.scss
@@ -26,6 +26,7 @@ $bio-lighter-blue: #CED0DF;
 $bio-shadow-gray: #d3d3d3;
 $bio-blue-gray: #d4d9e2;
 $bio-lighter-blue-gray: #ecf4f9;
+$bio-blue-green: rgb(46, 162, 141);
 
 // BODY STYLES
 $body-bg: $bio-white;
