small content adjustments

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -43,7 +43,7 @@
                     Biotope works with any framework - Angular, React, Vue, etc. so there won't be any compatibility issues. Use whichever you want. Or switch when it suits you.
                 </bio-benefit>
                 <bio-benefit data-resources="[{paths: ['components/BioBenefit/index.js']}]"
-                    imgsrc="../../_assets/future-proof.svg" title="Futureproof">
+                    imgsrc="../../_assets/future-proof.svg" title="Future-proof">
                     Web Components are a standard web technology. Because there is no coupling to the apps or websites where they are used in, 
                     your library of Web Components theoretically lives on forever.
                 </bio-benefit>
@@ -241,7 +241,6 @@
                     <bio-collaborator-tile imgsrc="_assets/custom-avatars/tiago-marques.jpg" github="https://github.com/tiagomapmarques">Tiago Marques
                     </bio-collaborator-tile>
                     <bio-collaborator-tile imgsrc="https://avatars1.githubusercontent.com/u/1905161?s=460&v=4" github="https://github.com/timomayer">Timo Mayer</bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/4408826?s=460&v=4" github="https://github.com/dannystey">Danny Stey</bio-collaborator-tile>
                 </div>
 
                 <h4 class="whosBehind__headline">Collaborators</h4>
@@ -258,12 +257,15 @@
                     </bio-collaborator-tile>
                     <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/3465835?s=460&v=4" github="https://github.com/jashson">Matthias Schulz
                     </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="_assets/custom-avatars/robin-spielmann.jpg" github="https://github.com/iam-robin">Robin Spielmann</bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="_assets/custom-avatars/robin-spielmann.jpg" github="https://github.com/iam-robin">Robin Spielmann
+                    </bio-collaborator-tile>
                     <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/32572355?s=460&v=4" github="https://github.com/dweiger">Dominikus Weiger
                     </bio-collaborator-tile>
                     <bio-collaborator-tile imgsrc="https://avatars0.githubusercontent.com/u/4287128?s=460&v=4" github="https://github.com/davelosert">David Losert
                     </bio-collaborator-tile>
                     <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/51372512?s=460&v=4" github="https://github.com/tiagoaguiar31">Tiago Aguiar
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/4408826?s=460&v=4" github="https://github.com/dannystey">Danny Stey
                     </bio-collaborator-tile>
                     <bio-collaborator-tile imgsrc="https://avatars2.githubusercontent.com/u/16318844?s=460&v=4" github="https://github.com/luke-m">Lukas Müller
                     </bio-collaborator-tile>
