fix(spelling): fix spelling "future-proof"
fix #167

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -43,7 +43,7 @@
                     Biotope works with any framework - Angular, React, Vue, etc. so there won't be any compatibility issues. Use whichever you want. Or switch when it suits you.
                 </bio-benefit>
                 <bio-benefit data-resources="[{paths: ['components/BioBenefit/index.js']}]"
-                    imgsrc="../../_assets/future-proof.svg" title="Futureproof">
+                    imgsrc="../../_assets/future-proof.svg" title="Future-proof">
                     Web Components are a standard web technology. Because there is no coupling to the apps or websites where they are used in, 
                     your library of Web Components theoretically lives on forever.
                 </bio-benefit>
