--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -11,9 +11,10 @@
                 Evolve your UI to stay ahead of developments on the web and in your company. Gain control of all your websites, Apps or IoT - using a single library of Web Components.
             </p>
             <bio-link-button title="See how it works" modifier="whiteText mediumLong"
-                data-resources="[{paths: ['components/BioButton/index.js']}]" url="#benefits"></bio-link-button>
+                data-resources="[{paths: ['components/BioLinkButton/index.js']}]" url="#benefits">
+            </bio-link-button>
             <bio-link-button title="See Docs" modifier="blue whiteText mediumLong"
-                data-resources="[{paths: ['components/BioButton/index.js']}]" url="https://github.com/biotope/biotope/blob/master/docs/quickstart.md">
+                data-resources="[{paths: ['components/BioLinkButton/index.js']}]" url="https://github.com/biotope/biotope/blob/master/docs/quickstart.md">
             </bio-link-button>
         </div>
     </div>
@@ -144,7 +145,7 @@
                 </bio-resource>
                 <bio-resource data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/expert.svg" border="noBorder">
                     <p>You want to learn more? Ask an expert.</p>
-                    <bio-link-button data-resources="[{paths: ['components/BioLinkButton/index.js']}]" modifier="full alignRight" title="Contact" url="mailto:coregroup@biotope.sh"></bio-link-button>
+                    <bio-link-button modifier="full alignRight" title="Contact" url="mailto:coregroup@biotope.sh"></bio-link-button>
                 </bio-resource>
             </div>
         </div>
@@ -212,8 +213,7 @@
             </a>
             <div class="footer__checkItOut">
                 <p>Of course we also built<br><span class="footer__bigWords">this website</span> with Biotope.</p>
-                <bio-link-button title="See how" modifier="blue" data-resources="[{paths: ['components/BioButton/index.js']}]" url="https://github.com/biotope/website">
-                </bio-link-button>
+                <bio-link-button title="See how" modifier="blue" data-resources="[{paths: ['components/BioLinkButton/index.js']}]" url="https://github.com/biotope/website"></bio-link-button>
             </div>
             <div class="footer__essentials">
                 <a class="js-openModal" modalType="imprint">Imprint</a>
