testing with a bigger og image

--- a/src/layouts/includes/htmlhead.meta.hbs
+++ b/src/layouts/includes/htmlhead.meta.hbs
@@ -19,4 +19,4 @@
 
 <!--DEV-NOTE: next two exntries are optional. define a custom share image and URL or remove this two lines -->
 <meta property="og:url" content="">
-<meta property="og:image" content="https://avatars3.githubusercontent.com/u/202614?s=460&v=4">
+<meta property="og:image" content="https://deploy-preview-170--stupefied-franklin-400c9d.netlify.com/_assets/biotope.png">
