--- a/src/layouts/includes/htmlhead.meta.hbs
+++ b/src/layouts/includes/htmlhead.meta.hbs
@@ -19,4 +19,4 @@
 
 <!--DEV-NOTE: next two exntries are optional. define a custom share image and URL or remove this two lines -->
 <meta property="og:url" content="">
-<meta property="og:image:secure_url" content="https://deploy-preview-170--stupefied-franklin-400c9d.netlify.com/_assets/biotope.png">
+<meta property="og:image" itemprop="image primaryImageOfPage" content="http://deploy-preview-170--stupefied-franklin-400c9d.netlify.com/_assets/biotope.png">
