--- a/src/layouts/includes/htmlhead.meta.hbs
+++ b/src/layouts/includes/htmlhead.meta.hbs
@@ -19,5 +19,5 @@
 
 <!--DEV-NOTE: next two exntries are optional. define a custom share image and URL or remove this two lines -->
 <meta property="og:url" content="">
-<meta property="og:image" itemprop="image primaryImageOfPage" content="https://www.mantruckandbus.com/fileadmin/_processed_/a/c/csm_MAN_18_SocialMedia_1200x628px_homepage_bb43e6c89e.jpg">
-<meta property="og:image:url" itemprop="image primaryImageOfPage" content="https://www.mantruckandbus.com/fileadmin/_processed_/a/c/csm_MAN_18_SocialMedia_1200x628px_homepage_bb43e6c89e.jpg">
+<meta property="og:image" content="https://www.mantruckandbus.com/fileadmin/_processed_/a/c/csm_MAN_18_SocialMedia_1200x628px_homepage_bb43e6c89e.jpg">
+<meta property="og:image:url" content="https://www.mantruckandbus.com/fileadmin/_processed_/a/c/csm_MAN_18_SocialMedia_1200x628px_homepage_bb43e6c89e.jpg">
