--- a/src/components/BioEasySetUp/styles.scss
+++ b/src/components/BioEasySetUp/styles.scss
@@ -69,16 +69,21 @@
 			}
 
 			.copy-code {
-				opacity: 0;
-				position: absolute;
-				top: 10px;
-				right: 31px;
-				color: $bio-dark-blue;
-				transition: opacity 0.3s ease;
-				cursor: pointer;
+				display: none;
+				
+				@include breakpoint($medium) {
+					display: block;
+					opacity: 0;
+					position: absolute;
+					top: 10px;
+					right: 31px;
+					color: $bio-dark-blue;
+					transition: opacity 0.3s ease;
+					cursor: pointer;
 
-				&:hover {
-					color: $bio-dark-blue-gray;
+					&:hover {
+						color: $bio-dark-blue-gray;
+					}
 				}
 			}
 
