--- a/src/layouts/includes/htmlhead.meta.hbs
+++ b/src/layouts/includes/htmlhead.meta.hbs
@@ -19,4 +19,4 @@
 
 <!--DEV-NOTE: next two exntries are optional. define a custom share image and URL or remove this two lines -->
 <meta property="og:url" content="">
-<meta property="og:image" content="">
+<meta property="og:image" content="https://biotope.sh/_assets/biotope.png">
