--- a/src/components/BioEasySetUp/styles.scss
+++ b/src/components/BioEasySetUp/styles.scss
@@ -49,6 +49,7 @@
 		}
 
         .code {
+			position: relative;
 			-ms-grid-column: 2;
 			-ms-grid-row: 2;
 			grid-column: 2;
@@ -65,6 +66,31 @@
 				grid-column: 3;
 				-ms-grid-row: 2;
 				grid-row: 2;
+			}
+
+			.copy-code {
+				display: none;
+				
+				@include breakpoint($medium) {
+					display: block;
+					opacity: 0;
+					position: absolute;
+					top: 10px;
+					right: 31px;
+					color: $bio-dark-blue;
+					transition: opacity 0.3s ease;
+					cursor: pointer;
+
+					&:hover {
+						color: $bio-dark-blue-gray;
+					}
+				}
+			}
+
+			&:hover {
+				.copy-code {
+					opacity: 1;
+				}
 			}
 		}
 	}
